--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,17 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
+  margin: auto;
+  width: 90%;
+  margin: 1em auto;
 }
 
 .App-link {
